--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
 
 .btn-border {
     padding: 8px 15px;
-    border: 2px solid #FD6E0A;
+    border: 3px solid #FD6E0A;
     font-size: 20px;
     border-radius: 4px;
     font-weight: 700;
@@ -44,8 +44,20 @@
     color: #0000ff;
 }
 
-.orrage {
-    color: #FD6E0A;
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 
 /* Nav Menu  */
@@ -80,16 +92,22 @@ nav a {
 /* Header Releted Styles */
 .header {
     background-color: #fce2cf;
-    background-image: url('/images/developer.png');
+    background-image: url('/images/header_bg.png');
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position: left;
+    background-size: auto;
+    background-position: bottom right;
 }
+
 
 .banner {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 50px 30px 30px 200px;
+    padding: 70px 30px 0px 200px;
+}
+
+.banner-content {
+    max-width: 500px;
 }
 
 .banner-getting {
@@ -100,7 +118,7 @@ nav a {
 
 .banner-title {
     color: #181818;
-    font-size: 85px;
+    font-size: 65px;
     font-weight: 700;
 }
 
@@ -109,4 +127,42 @@ nav a {
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 30px;
+}
+
+
+/* Main Section  Styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About Section Styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+
+.info-title {
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.info-description {
+    color: #474747;
+    font-size: 18px;
+    font-weight: 700;
 }
