--- a/styles/style.css
+++ b/styles/style.css
@@ -136,12 +136,16 @@ main {
     margin: 0 auto;
 }
 
+section {
+    margin: 120px 0;
+}
+
+
 /* About Section Styles */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px 0;
 }
 
 .about-info-container {
@@ -166,3 +170,38 @@ main {
     font-size: 18px;
     font-weight: 700;
 }
+
+/* What I Do Section Styles */
+
+.skill-container {
+    display: flex;
+
+}
+
+.skill-content {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #FD6E0A;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-content>img {
+    margin-bottom: 10px;
+}
+
+.skill-title {
+    margin-bottom: 10px;
+    color: #181818;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+/* A summary of My Resume Section Styles */
