--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,10 @@
 
 }
 
+
+
 .btn-primary {
-    padding: 10px 15px;
+    padding: 15px 30px;
     background-color: #FD6E0A;
     color: #fff;
     border: none;
@@ -17,11 +19,12 @@
 }
 
 .btn-border {
-    padding: 8px 15px;
+    padding: 13px 30px;
     border: 3px solid #FD6E0A;
     font-size: 20px;
     border-radius: 4px;
     font-weight: 700;
+    margin-left: 30px;
 }
 
 .btn-border a {
@@ -49,7 +52,7 @@
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .section-description {
@@ -60,12 +63,18 @@
     margin-bottom: 30px;
 }
 
+.center-btn {
+    text-align: center;
+    margin-top: 20px;
+}
+
 /* Nav Menu  */
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 200px;
+    padding: 30px 0;
 }
 
 .site-title {
@@ -103,7 +112,7 @@ nav a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 70px 30px 0px 200px;
+    padding: 50px 30px 0px 200px;
 }
 
 .banner-content {
@@ -205,3 +214,46 @@ section {
 }
 
 /* A summary of My Resume Section Styles */
+
+.resume-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.resume-box {
+    width: 50%;
+    padding: 0 20px;
+}
+
+.resume-main-title {
+    margin-bottom: 15px;
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.resume-title-desc {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.resume-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.resume-contain {
+    margin: 30px 0;
+}
